# pwsw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  TEMP_TUI_REFACTOR.md  build.rs  clippy.jsonl  clippy.txt  logging_plan.md  performance.md  refactor_plan.md  refactor_review1.md  refactor_review2.md  refactor_review3.md  refactor_review_final.md  rust_plan.md  sinkcard.md  src_plan.md  systemd_plan.md  tui_plan.md
.github/workflows/: ci.yml  claude-code-review.yml  docs-sync.yml
contrib/: PKGBUILD  README.md  pwsw.desktop  pwsw.service
contrib/icons/: README.md
contrib/systemd/: README.md  pwsw.service
man/: pwsw.1.md  pwsw.5.md
scripts/: install_git_hook.sh  verify_docs_sync.sh  verify_tests_safe.sh
src/: cli.rs  commands.rs  config.rs  daemon.rs  daemon_manager.rs  ipc.rs  lib.rs  logging.rs  main.rs  notification.rs  pipewire.rs  state.rs  style.rs  test_utils.rs
src/compositor/: ext_toplevel.rs  mod.rs  niri.rs  plasma.rs  sway.rs  wlr_toplevel.rs
src/tui/: app.rs  daemon_control.rs  editor_helpers.rs  editor_state.rs  input.rs  log_tailer.rs  mod.rs  preview.rs  textfield.rs  widgets.rs
src/tui/screens/: dashboard.rs  help.rs  mod.rs  rules.rs  settings.rs  sinks.rs
src/tui/tests/: editor_helpers.rs  editor_helpers_more.rs  editor_state_tests.rs  editor_word_nav_tests.rs  forwarder.rs  input_integration_tests.rs  mod.rs  mouse_mapping_tests.rs  simple_editor_tests.rs  sink_editor.rs  text_field_clipping.rs  textfield_compute_tests.rs  windows_fp.rs
tests/: cli_smoke_tests.rs  compositor_integration.rs  config_integration.rs
tmp/: tui-clippy-baseline.txt
