[package]
name = "pwsw"
version = "0.3.1"
edition = "2021"
rust-version = "1.74"
description = "PipeWire Switcher - Automatically switch audio sinks based on active windows"
license = "MIT"
repository = "https://github.com/ledati16/pwsw"
keywords = ["wayland", "pipewire", "audio", "window-manager", "audio-routing"]
categories = ["multimedia::audio", "command-line-utilities"]

[features]
default = ["tui"]
tui = ["dep:ratatui"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime - minimal features for Unix socket + signals
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time"] }

# Wayland protocol support
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }      # wlr-foreign-toplevel-management

# Configuration and serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pattern matching for window rules
regex = "1"

# Error handling with context
anyhow = "1"

# Desktop notifications
notify-rust = "4"

# systemd notification protocol
sd-notify = "0.4"

# Terminal styling for CLI output (also used by future TUI)
crossterm = { version = "0.28", features = ["event-stream"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# XDG config directory
dirs = "5"

# TUI framework (optional - enabled by default via "tui" feature)
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
tui-input = "0.14.0"
throbber-widgets-tui = "0.8"
tui-logger = "0.17.4"
color-eyre = "0.6.5"
notify = "6.1.1"
serde_regex = "1.1.0"
futures-util = "0.3.31"
log = "0.4.29"
users = "0.11"
tempfile = "3"

[profile.release]
lto = "fat"         # Full link-time optimization for maximum performance
codegen-units = 1   # Single compilation unit for better optimization
strip = true        # Remove debug symbols (smaller binary, no runtime cost)
panic = "abort"     # Immediate termination on panic (systemd restarts daemon)

[profile.dev]
opt-level = 0
debug = true

[build-dependencies]
built = { version = "0.7", features = ["git2"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
rstest = "0.22"
test-case = "3"

