[package]
name = "pwsw"
version = "0.5.0"
edition = "2024"
rust-version = "1.92"
description = "PipeWire Switcher - Automatically switch audio sinks based on active windows"
license = "MIT"
repository = "https://github.com/ledati16/pwsw"
keywords = ["wayland", "pipewire", "audio", "window-manager", "audio-routing"]
categories = ["multimedia::audio", "command-line-utilities"]

[features]
default = ["tui"]
tui = ["dep:ratatui"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime - minimal features for Unix socket + signals
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time"] }

# Wayland protocol support
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["staging"] }        # ext-foreign-toplevel-list-v1
wayland-protocols-wlr = { version = "0.3", features = ["client"] }      # wlr-foreign-toplevel-management

# Configuration and serialization
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pattern matching for window rules
regex = "1"

# Error handling with context - modern approach with better error display
# anyhow removed in favor of color-eyre (eyre)

# Desktop notifications
notify-rust = "4"

# systemd notification protocol
sd-notify = "0.4"

# Terminal styling for CLI output (also used by future TUI)
crossterm = { version = "0.29", features = ["event-stream"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# XDG config directory
dirs = "6"

# TUI framework (optional - enabled by default via "tui" feature)
ratatui = { version = "0.30", optional = true, default-features = false, features = ["crossterm"] }
tui-input = "0.15.0"
throbber-widgets-tui = "0.10"
tui-logger = { version = "0.18.0", features = ["tracing-support"] }
color-eyre = "0.6.5"
notify = "8.2.0"
serde_regex = "1.1.0"
futures-util = "0.3.31"
users = "0.11"
tempfile = "3"

# Process management (Unix signals for PID file validation)
#[target.'cfg(unix)'.dependencies]
# nix removed: PID check now uses /proc on Linux


[profile.release]
lto = "fat"         # Full link-time optimization for maximum performance
codegen-units = 1   # Single compilation unit for better optimization
strip = true        # Remove debug symbols (smaller binary, no runtime cost)
panic = "abort"     # Immediate termination on panic (systemd restarts daemon)

[profile.dev]
opt-level = 0
debug = true

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
mandown = "1.1.0"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
rstest = "0.26"
test-case = "3"
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["server", "client"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[lints.clippy]
# === Structural Patterns (justified by domain) ===
# Config structs: Independent boolean flags, not state machines (3 instances)
struct_excessive_bools = "allow"

# === Cohesion Over Line Limits (14 instances) ===
# Event loops, TUI screens, input handlers - cohesive logic hard to split
too_many_lines = "allow"

# === Semantic Differences (1 instance) ===
# Rule editor - conceptually different field types despite similar code
match_same_arms = "allow"

# Note: Generated code suppressions (needless_raw_string_hashes, doc_markdown)
# kept in src/lib.rs as #[allow] to keep them local to generated code

